# icloud_mcp

./: .env.example  .gitignore  CLAUDE.md  ROADMAP.md  pyproject.toml
src/icloud_mail_mcp/: __init__.py  __main__.py  config.py  exceptions.py  imap_client.py  models.py  rules.py  server.py  smtp_client.py
src/icloud_mcp/: __init__.py  __main__.py  caldav_client.py  config.py  eventkit_client.py  eventkit_store.py  exceptions.py  imap_client.py  models.py  rules.py  server.py  smtp_client.py
tests/: conftest.py  test_caldav_client.py  test_config.py  test_eventkit_client.py  test_eventkit_conversions.py  test_eventkit_store.py  test_imap_client.py  test_models.py  test_rules.py  test_server.py  test_smtp_client.py
