[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icloud-mcp"
version = "0.1.0"
description = "MCP server connecting Claude to iCloud (Mail via IMAP/SMTP, Calendar via CalDAV)"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "aioimaplib",
    "aiosmtplib",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "icalendar",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["src/icloud_mcp"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["aioimaplib", "aioimaplib.*"]
ignore_missing_imports = true

# icalendar ships py.typed but its component constructors/.get are untyped,
# which trips strict's no-untyped-call. Treat it as an opaque (Any) module.
[[tool.mypy.overrides]]
module = ["icalendar", "icalendar.*"]
follow_imports = "skip"
follow_untyped_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
